Updated trainig LoRA model

--- a/main.ipynb
+++ b/main.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,36 +53,42 @@
     "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "NUM_EPOCHS = 20\n",
     "LR = 5e-5\n",
+    "ACCUMULATION_STEPS = 4\n",
     "BATCH_SIZE = 1\n",
-    "LORA_RANK = 4\n",
-    "LORA_ALPHA = 1.0\n",
-    "TRAINING_RESULTS = os.path.join(config.get(\"RESULTS_PATH\"), \"training_results\")\n",
+    "LORA_RANK = 128\n",
+    "LORA_ALPHA = 64\n",
+    "# DATASET_PATH = os.path.join(config.get(\"DATASET_PATH\"), \"Anor_Londo\")\n",
+    "DATASET_PATH = os.path.join(config.get(\"DATASET_PATH\"), \"nupogodi_dataset\")\n",
+    "TRAINING_RESULTS = os.path.join(config.get(\"RESULTS_PATH\"), \"training_results\", \"2\")\n",
     "os.makedirs(TRAINING_RESULTS, exist_ok=True)\n",
-    "PROMPT = \"Anor Londo\"\n",
+    "# PROMPT = \"The image in style of the pathologic 2\"\n",
+    "# PROMPT = \"Round pink hedgehog from the cartoon Smeshariki.\"\n",
+    "PROMPT = \"The wolf from the cartoon “Well, Wait!”\"\n",
+    "# PROMPT = \"Anor Londo\"\n",
     "SAVE_DIR = config.get(\"TRAINING_FOLDER_NAME\")\n",
     "DEVICE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vae, unet, text_encoder, tokenizer, noise_scheduler = load_models(config=config)\n",
+    "vae, unet, text_encoder, tokenizer, noise_scheduler = load_models()\n",
     "pipe = initialize_pipeline(vae=vae, unet=unet, text_encoder=text_encoder, tokenizer=tokenizer, noise_scheduler=noise_scheduler, device=DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:01<00:00, 40.62it/s]\n"
+      "100%|██████████| 50/50 [00:01<00:00, 35.83it/s]\n"
      ]
     }
    ],
@@ -93,16 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader = create_dataloader(folder_path=config.get(\"DATASET_PATH\"), prompt=PROMPT, batch_size=BATCH_SIZE)"
+    "dataloader = create_dataloader(folder_path=DATASET_PATH, prompt=PROMPT, batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!export PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -379,281 +394,282 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20: 100%|██████████| 10/10 [00:01<00:00,  5.68it/s]\n"
+      "Epoch 1/20: 100%|██████████| 25/25 [00:06<00:00,  3.58it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 completed. Loss: 0.3115234375\n"
+      "Epoch 1 completed. Avg Loss: 0.05389774950221181\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/20: 100%|██████████| 10/10 [00:01<00:00,  6.31it/s]\n"
+      "Epoch 2/20: 100%|██████████| 25/25 [00:06<00:00,  3.89it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 completed. Loss: 0.27099609375\n"
+      "Epoch 2 completed. Avg Loss: 0.045330538311973215\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3/20: 100%|██████████| 10/10 [00:01<00:00,  5.87it/s]\n"
+      "Epoch 3/20: 100%|██████████| 25/25 [00:07<00:00,  3.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3 completed. Loss: 0.48974609375\n"
+      "Epoch 3 completed. Avg Loss: 0.03182743863202631\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4/20: 100%|██████████| 10/10 [00:01<00:00,  6.48it/s]\n"
+      "Epoch 4/20: 100%|██████████| 25/25 [00:06<00:00,  3.58it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4 completed. Loss: 0.0240325927734375\n"
+      "Epoch 4 completed. Avg Loss: 0.036081603337079285\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5/20: 100%|██████████| 10/10 [00:01<00:00,  6.65it/s]\n"
+      "Epoch 5/20: 100%|██████████| 25/25 [00:07<00:00,  3.28it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5 completed. Loss: 0.0194854736328125\n"
+      "Epoch 5 completed. Avg Loss: 0.03003336306195706\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6/20: 100%|██████████| 10/10 [00:01<00:00,  6.19it/s]\n"
+      "Epoch 6/20: 100%|██████████| 25/25 [00:06<00:00,  3.68it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6 completed. Loss: 0.043365478515625\n"
+      "Epoch 6 completed. Avg Loss: 0.03727402943186462\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7/20: 100%|██████████| 10/10 [00:01<00:00,  6.09it/s]\n"
+      "Epoch 7/20: 100%|██████████| 25/25 [00:07<00:00,  3.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7 completed. Loss: 0.04345703125\n"
+      "Epoch 7 completed. Avg Loss: 0.031175592893268912\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 8/20: 100%|██████████| 10/10 [00:01<00:00,  6.59it/s]\n"
+      "Epoch 8/20: 100%|██████████| 25/25 [00:07<00:00,  3.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8 completed. Loss: 0.23583984375\n"
+      "Epoch 8 completed. Avg Loss: 0.02174059708137065\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9/20: 100%|██████████| 10/10 [00:01<00:00,  5.94it/s]\n"
+      "Epoch 9/20: 100%|██████████| 25/25 [00:07<00:00,  3.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9 completed. Loss: 0.280517578125\n"
+      "Epoch 9 completed. Avg Loss: 0.032375190090388056\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10/20: 100%|██████████| 10/10 [00:01<00:00,  5.97it/s]\n"
+      "Epoch 10/20: 100%|██████████| 25/25 [00:07<00:00,  3.57it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10 completed. Loss: 0.223876953125\n"
+      "Epoch 10 completed. Avg Loss: 0.027309614783152938\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 11/20: 100%|██████████| 10/10 [00:01<00:00,  6.71it/s]\n"
+      "Epoch 11/20: 100%|██████████| 25/25 [00:06<00:00,  3.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 11 completed. Loss: 0.060760498046875\n"
+      "Epoch 11 completed. Avg Loss: 0.029107805932872\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 12/20: 100%|██████████| 10/10 [00:01<00:00,  6.61it/s]\n"
+      "Epoch 12/20: 100%|██████████| 25/25 [00:07<00:00,  3.39it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 12 completed. Loss: 0.1533203125\n"
+      "Epoch 12 completed. Avg Loss: 0.019570316146127878\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 13/20: 100%|██████████| 10/10 [00:01<00:00,  6.31it/s]\n"
+      "Epoch 13/20: 100%|██████████| 25/25 [00:07<00:00,  3.54it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 13 completed. Loss: 0.01247406005859375\n"
+      "Epoch 13 completed. Avg Loss: 0.040591212648432705\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 14/20: 100%|██████████| 10/10 [00:01<00:00,  6.10it/s]\n"
+      "Epoch 14/20: 100%|██████████| 25/25 [00:06<00:00,  3.61it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 14 completed. Loss: 0.0099639892578125\n"
+      "Epoch 14 completed. Avg Loss: 0.034369726637378334\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 15/20: 100%|██████████| 10/10 [00:01<00:00,  6.23it/s]\n"
+      "Epoch 15/20: 100%|██████████| 25/25 [00:06<00:00,  3.67it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 15 completed. Loss: 0.00981903076171875\n"
+      "Epoch 15 completed. Avg Loss: 0.029144022418186068\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 16/20: 100%|██████████| 10/10 [00:01<00:00,  6.22it/s]\n"
+      "Epoch 16/20: 100%|██████████| 25/25 [00:07<00:00,  3.54it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 16 completed. Loss: 0.1177978515625\n"
+      "Epoch 16 completed. Avg Loss: 0.022418071664869785\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 17/20: 100%|██████████| 10/10 [00:01<00:00,  6.01it/s]\n"
+      "Epoch 17/20: 100%|██████████| 25/25 [00:07<00:00,  3.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 17 completed. Loss: 0.003509521484375\n"
+      "Epoch 17 completed. Avg Loss: 0.05663077462464571\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 18/20: 100%|██████████| 10/10 [00:01<00:00,  6.00it/s]\n"
+      "Epoch 18/20: 100%|██████████| 25/25 [00:07<00:00,  3.50it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 18 completed. Loss: 0.09906005859375\n"
+      "Epoch 18 completed. Avg Loss: 0.038407605295069515\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 19/20: 100%|██████████| 10/10 [00:01<00:00,  6.30it/s]\n"
+      "Epoch 19/20: 100%|██████████| 25/25 [00:07<00:00,  3.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19 completed. Loss: 0.09967041015625\n"
+      "Epoch 19 completed. Avg Loss: 0.02813806435558945\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 20/20: 100%|██████████| 10/10 [00:01<00:00,  6.14it/s]\n"
+      "Epoch 20/20: 100%|██████████| 25/25 [00:07<00:00,  3.55it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 20 completed. Loss: 0.0574951171875\n",
-      "Final weights saved to experiments/experiment_20250113_171703/lora_weights_last_epoch.pth.\n"
+      "Epoch 20 completed. Avg Loss: 0.036252287172246725\n",
+      "Loss curve saved to experiments/experiment_20250116_205129/loss_curve.png\n",
+      "Final weights saved to experiments/experiment_20250116_205129/lora_weights_last_epoch.pth.\n"
      ]
     }
    ],
@@ -663,28 +679,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:01<00:00, 25.16it/s]"
+      "100%|██████████| 30/30 [00:01<00:00, 15.24it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated picture save in : results/training_results/test_lora_all_sd.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Generated picture save in : results/training_results/2/test_lora_all_sd.png\n"
      ]
     }
    ],
